--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,36 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
-/build/
-
-# Symbolication related
-app.*.symbols
-
-# Obfuscation related
-app.*.map.json
-
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+build/
+# Android related
+.android/
+# iOS related
+ios/Flutter/.last_build_id
+ios/Pods/
+ios/.symlinks/
+# Xcode related
+*.xcworkspace
+*.xcuserstate
+*.moved-aside
+*.xcuserstate
+DerivedData/
+.idea/
+*.iml
+# VS Code related
+.vscode/
+# Misc
+*.log
+*.lock
+# Firebase configuration files
+# Do NOT commit these files to version control
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+# Optional: Exclude Firebase rules if you have them locally
+firestore.rules
+storage.rules
+# Others
+*.DS_Store
